fix: resolve SonarQube issues